Mon Jul 12 11:15:34 1993  Ken Raeburn  (raeburn@deneb.cygnus.com)

	* config/obj-elf.c (obj_elf_section): Allow `@' to introduce an
	attribute name.  Handle `execinstr' attribute.

Mon Jul 12 07:22:28 1993  Ian Lance Taylor  (ian@cygnus.com)

	* config/tc-mips.c (mips_ip): Don't warn on 'i' or 'j' mismatch if
	there is another alternative for the instruction.

Fri Jul  9 17:31:34 1993  Roland H. Pesch  (pesch@fowanton.cygnus.com)

	* doc/as.texinfo: updates for H8/300H

Thu Jul  8 14:41:43 1993  Mark Eichin  (eichin@cygnus.com)

	* config/tc-i960.c (md_create_short_jump, md_create_long_jump,
	md_number_to_chars, md_section_align): Adjusted to use valueT,
	addressT, to match tc.h.

Thu Jul  8 14:15:05 1993  Ken Raeburn  (raeburn@cambridge.cygnus.com)

	* config/tc-sparc.c (s_common): Revamp to handle both syntaxes,
	independent of format.

Thu Jul  8 07:25:25 1993  Doug Evans  (dje@canuck.cygnus.com)

	* config/tc-h8300.h (TC_CONS_RELOC): Use R_RELLONG if h8/300h.

Wed Jul  7 18:11:07 1993  david d `zoo' zuhn  (zoo at rtl.cygnus.com)

	* configure.in: define CROSS=-DCROSS_COMPILE if it is a cross
	build; also recognize h8300-*-coff

Wed Jul  7 10:21:24 1993  Ian Lance Taylor  (ian@cygnus.com)

	* symbols.c (fb_label_instance, fb_label_instance_inc): Don't dump
	core just because somebody uses a label before it is defined.

	* config/mips-opcode.h: Moved to opcode/mips.h.
	* config/tc-mips.c: Include opcode/mips.h rather than
	mips-opcode.h.
	(append_insn): An extra NOP is only needed after instructions
	which set HI or LO, not after instructions which read it.
	(macro_build, mips_ip): Support new 'E', 'G' and 'B' arguments.
	(macro): cfc1 and ctc1 now take "t,G" rather than "t,d".
	* config/tc-mips.h (struct mips_opcode): Don't define.
	* config/mips-big.mt, config/mips-lit.mt (TARG_CPU_DEPENDENTS):
	Set to $(srcdir)/../include/opcode/mips.h.

	Get the MIPS assembler up to speed with other gas changes:

	* config/obj-ecoff.c (ecoff_set_vma, ecoff_frob_symbol):